--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                 },
                 {
                     question: "When was Open Mind Services Limited established and who are the owners?",
-                    answer: "Open Mind Services Limited is a privately held company founded in 2007, originally known as Silver Lining. The company is owned by Mr. Naveen Gulati (Founder & CEO) and Ms. Rakhi Gulati (COO and Director), who lead the organization with their combined expertise in business operations and strategic management."
+                    answer: "Open Mind Services Limited is a privately held company founded in 2007. The company is owned by Mr. Naveen Gulati (Founder & CEO) and Ms. Rakhi Gulati (COO and Director), who lead the organization with their combined expertise in business operations and strategic management."
                 },
                 {
                     question: "Who is Mr. Naveen Gulati and what are his achievements?",
